replace binary config with an actual json config